# freetubew

./: Cargo.toml  README.md
.cargo/: config.toml
crates/smaa/: Cargo.toml
src/: libw.rs  main.rs
src/algo/: cnc.rs  mod.rs
src/device/: app.rs  aux_state.rs  background_pipleine.rs  bend_pipe.rs  camera.rs  dorn.rs  dt_state.rs  graphics.rs  gstate.rs  mesh_pipeline.rs  mod.rs  pcstate.rs  scene.rs  txt_mesh.rs  txt_pipeline.rs  wstate.rs
src/pipesbend/: mod.rs
src/remote/: in_state.rs  mod.rs
src/shaders/: background_shader.wgsl  mesh_shader.wgsl  selection_shader.wgsl  txt_shader.wgsl
src/trialgo/: analyzepl.rs  bendpipe.rs  foran_utils.rs  mod.rs  pathfinder.rs  steputils.rs
src/utils/: dim.rs  dorn.rs  mod.rs
