[package]
name = "freetubew"
version = "0.1.0"
edition = "2021"

[lib]
name="main"
path="src/libw.rs"
crate_type=["cdylib"]

[[bin]]
name="freetubew"
path="src/main.rs"

[dependencies]
nanoid = "0.4.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
once_cell = "1.19.0"
env_logger = "0.11.5"
parking_lot = "0.12.3"
itertools = "0.13.0"

truck-base =  {git="https://github.com/ricosjp/truck.git"}
ruststep = { git = "https://github.com/ricosjp/ruststep.git" }
truck-geometry = {git="https://github.com/ricosjp/truck.git"}
truck-geotrait = {git="https://github.com/ricosjp/truck.git"}
truck-modeling = {git="https://github.com/ricosjp/truck.git"}
truck-polymesh = {git="https://github.com/ricosjp/truck.git"}
truck-topology  = {git="https://github.com/ricosjp/truck.git"}
truck-meshalgo  = {git="https://github.com/ricosjp/truck.git"}
truck-shapeops  = {git="https://github.com/ricosjp/truck.git"}
truck-stepio = {git="https://github.com/ricosjp/truck.git"}
clap = "4.5.15"
#bvh = { version = "0.8.0",features = ["serde"] }
#triangle = "0.2.0"
smaa = "0.15.0"
bitflags = "2.6.0"
log = "0.4.22"
pollster = "0.3.0"
kurbo = "0.11.0"
#glyphon = "0.5.0"
glyphon={git = "https://github.com/grovesNL/glyphon.git"}
#HasRawWindowHandle
#https://stackoverflow.com/questions/77373416/the-trait-raw-window-handlehasrawdisplayhandle-is-not-implemented-for-windo

winit = { version = "0.30.5"}

palette = { version = "0.7.6",default-features = true,features = ["named","named_from_str","bytemuck"] }
#wgpu={git = "https://github.com/gfx-rs/wgpu.git",features = ["webgpu"]}
#wgpu = { version = "22.1.0", default-features = false,features = ["webgl","wgsl"]}
wgpu = { version = "22.1.0",features = ["webgl"]}

#wgpu = { version = "22.1.0"}


rand = "0.8.5"
bytemuck = { version = "1.16.3", features = ["derive"] }
#array-bytes = "6.2.2"

#glam = { version = "0.25.0", features = ["bytemuck"] }
cgmath = "0.18.0"
nalgebra = "0.33.0"
glob = "0.3.1"
byteorder = "1.5.0"



#web wasm-pack build --target web
cfg-if = "1.0.0"
zerocopy = { version ="0.7.35" , features = ["derive"]}
tokio = { version = "1.39.2", features = ["sync", "rt", "macros"] }
serde_json = "1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
web-sys = { version = "0.3.70", features = ["Document", "Window", "Element","HtmlCanvasElement", "CssStyleDeclaration"] }
#wgpu={git = "https://github.com/gfx-rs/wgpu.git",features = ["webgpu"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
#wgpu = { version = "0.20.1", features = ["webgl"]}
wasm-bindgen = { version = "0.2.93"}
wasm-bindgen-futures = "0.4.43"
