[package]
name = "freetubew"
version = "0.1.0"
edition = "2021"

[lib]
name = "main"
path = "src/libw.rs"
crate_type = ["cdylib", "rlib"]

[[bin]]
name = "freetubew"
path = "src/main.rs"

[dependencies]
web-time = "1.1.0"
#instant = "0.1.13"
#nanoid = "0.4.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
once_cell = "1.20.2"
env_logger = "0.11.5"
#parking_lot = "0.12.3"
itertools = "0.13.0"
nom = "7.1.3"
truck-base = { git = "https://github.com/ricosjp/truck.git" }
#ruststep = { git = "https://github.com/ricosjp/ruststep.git" }


ruststep = { version = "0.4.0",features = ["ap201","ap203"] }
truck-geometry = { git = "https://github.com/ricosjp/truck.git" }
#truck-geotrait = { git = "https://github.com/ricosjp/truck.git" }
truck-modeling = { git = "https://github.com/ricosjp/truck.git" }
#truck-polymesh = { git = "https://github.com/ricosjp/truck.git" }
truck-topology = { git = "https://github.com/ricosjp/truck.git" }
truck-meshalgo = { git = "https://github.com/ricosjp/truck.git" }
#truck-shapeops = { git = "https://github.com/ricosjp/truck.git" }
truck-stepio = { git = "https://github.com/ricosjp/truck.git" }
#clap = "4.5.20"
#bvh = { version = "0.8.0",features = ["serde"] }
#triangle = "0.2.0"
#smaa = "0.15.0"
smaa = { path = "../smaa-rs" }
#bitflags = "2.6.0"
log = "0.4.22"
pollster = "0.4.0"
#kurbo = "0.11.1"
#glyphon = "0.6.0"
#glyphon = { git = "https://github.com/grovesNL/glyphon.git" }
#HasRawWindowHandle
#https://stackoverflow.com/questions/77373416/the-trait-raw-window-handlehasrawdisplayhandle-is-not-implemented-for-windo

#winit = { git="https://github.com/rust-windowing/winit.git"}
winit = { version = "0.30.5" }
is-odd = "1.1.0"
palette = { version = "0.7.6", default-features = true, features = ["named", "named_from_str", "bytemuck"] }
#wgpu={git = "https://github.com/gfx-rs/wgpu.git",features = ["webgpu"]}
#wgpu = { version = "22.1.0", default-features = false,features = ["webgl","wgsl"]}
wgpu = { version = "23.0.1", features = ["webgpu"] }
image = "0.25.5"
rand = "0.8.5"
bytemuck = { version = "1.20.0", features = ["derive"] }
cgmath = "0.18.0"
#nalgebra = "0.33.2"
#glob = "0.3.1"
#byteorder = "1.5.0"



#cfg-if = "1.0.0"
#zerocopy = { version = "0.8.9", features = ["derive"] }
#tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
#serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
web-sys = { version = "0.3.74", features = ["Document", "Window", "Element", "HtmlCanvasElement", "CssStyleDeclaration", "console", "HtmlCollection"] }
phf = "0.11.2"
rusttype = "0.9.3"
shipyard = "0.7.4"


#rayon = { version = "1.10.0", features = ["web_spin_lock"] }
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
